--- a/instructions_week1.html
+++ b/instructions_week1.html
@@ -167,6 +167,18 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <a class="dropdown-item" href="./weekly-notes/week-06-notes.html">
  <span class="dropdown-text">Week 6: Spatial Machine Learning &amp; Advanced Regression</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./weekly-notes/week-07-notes.html">
+ <span class="dropdown-text">Week 7: Model Diagnostics &amp; Spatial Autocorrelation</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./weekly-notes/week-09-notes.html">
+ <span class="dropdown-text">Week 9: Critical Perspectives on Predictive Policing</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./weekly-notes/week-09/lab/predictive_policing_exercise.html">
+ <span class="dropdown-text">In-Class Lab 9: Predictive Policing - Technical Implementation</span></a>
+  </li>  
     </ul>
   </li>
   <li class="nav-item dropdown ">
@@ -185,6 +197,10 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
         <li>
     <a class="dropdown-item" href="./labs/lab_2/assignment2_template.html">
  <span class="dropdown-text">Lab 2: Spatial Analysis and Visualization</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./labs/lab_4/assignment4.html">
+ <span class="dropdown-text">Lab 4: Spatial Predictive Analysis</span></a>
   </li>  
     </ul>
   </li>
